--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "eventvista",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -29,24 +29,24 @@
     "dotenv": "^16.4.5",
     "expo": "^51.0.0",
     "expo-auth-session": "~5.5.2",
-    "expo-clipboard": "^6.0.3",
-    "expo-constants": "^16.0.2",
+    "expo-cli": "^6.3.10",
+    "expo-clipboard": "~6.0.3",
+    "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
-    "expo-dev-client": "~4.0.19",
     "expo-file-system": "~17.0.1",
-    "expo-image-picker": "~15.0.6",
-    "expo-linking": "^6.3.1",
+    "expo-image-picker": "~15.0.7",
+    "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-media-library": "~16.0.4",
     "expo-network": "~6.0.1",
-    "expo-notifications": "~0.28.9",
+    "expo-notifications": "~0.28.14",
     "expo-permissions": "~14.2.1",
     "expo-random": "~14.0.1",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "^3.0.6",
-    "expo-updates": "~0.25.18",
-    "expo-web-browser": "^13.0.3",
+    "expo-system-ui": "~3.0.7",
+    "expo-updates": "~0.25.21",
+    "expo-web-browser": "~13.0.3",
     "js-base64": "^3.7.7",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
@@ -63,7 +63,7 @@
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.11.7",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
